@@ -3,4 +3,4 @@
 export CLASSPATH=build/libs/DemoFX.jar
 
 # May need to set -Xmx1024m on low RAM  machines
-"$JAVA_HOME/bin/java" -jar $CLASSPATH $@
+"$JAVA_HOME/bin/java" -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:demofx.gc.log -jar $CLASSPATH $@
